# exhaust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.cargo/: mutants.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
exhaust-macros/: Cargo.toml  README.md
exhaust-macros/src/: common.rs  fields.rs  lib.rs
src/: convenience.rs  example-derive-usage.rs  impls.rs  indexable.rs  iteration.rs  lib.rs  mh_.rs  patterns.rs  test_compile_fail.rs  tests.rs
src/impls/: alloc_impls.rs  array.rs  bool.rs  core_cell.rs  core_cmp.rs  core_convert.rs  core_fmt.rs  core_future.rs  core_hash.rs  core_marker.rs  core_num.rs  core_ops.rs  core_option.rs  core_primitive.rs  core_result.rs  core_sync.rs  core_task.rs  mod.rs  primitive.rs  std_impls.rs
tests/: alloc_impls.rs  core_impls.rs  deriving.rs  keyed_collections.rs  std_impls.rs
tests/helper/: mod.rs
xtask/: Cargo.toml
xtask/src/: xtask.rs
