[workspace]
members = [
    "exhaust-macros",
    "xtask",
]

[package]
name = "exhaust"
version = "0.2.2"
edition = "2021"
rust-version = "1.80.0"
description = "Trait and derive macro for working with all possible values of a type (exhaustive enumeration)."
repository = "https://github.com/kpreid/exhaust/"
license = "MIT OR Apache-2.0"
categories = ["algorithms", "rust-patterns", "no-std"]
keywords = ["exhaustive"]

[features]
default = ["std"]
std = ["alloc"]
alloc = ["dep:itertools"]

[[test]]
name = "alloc_impls"
required-features = ["alloc"]

[[test]]
name = "std_impls"
required-features = ["std"]

[[test]]
name = "keyed_collections"
required-features = ["alloc"]

[dependencies]
exhaust-macros = { version = "0.2.1", path = "exhaust-macros" }
# itertools is used for its powerset iterator, which is only available with alloc
itertools = { workspace = true, optional = true }
mutants = "0.0.3"

[workspace.dependencies]
# Minimum version of `itertools` is 0.13.0 because we need this bug fixed,
#   <https://github.com/rust-itertools/itertools/issues/337>,
# which affects `ExhaustMap`. 0.14 is the current latest version, which contains no breaking
# changes relevant to our usages: according to the changelog,
#   * Increased MSRV to 1.63.0
#   * Removed generic parameter from cons_tuples
# neither of which affects us.
itertools = { version = ">=0.13.0, <0.15", default-features = false, features = ["use_alloc"] }
