[workspace]
members = [
    "exhaust-macros",
    "xtask",
]
# Setting default-members to include `exhaust-macros` ensures we won't accidentally forget to
# `cargo publish` the macro package...
default-members = [
    ".",
    "exhaust-macros",
]

[workspace.package]
edition = "2021"
rust-version = "1.80.0"
repository = "https://github.com/kpreid/exhaust/"
license = "MIT OR Apache-2.0"

[package]
name = "exhaust"
# When bumping this don't forget the relationship with the macro package!
# Special note: The version of `exhaust` and `exhaust-macros` are currently desynced,
# to allow a set of breaking changes to the signatures of macro helper items.
# This version has started using "=" version requirements for `exhaust-macros`, so when we
# do decide to release `exhaust` v0.3, we will be able to keep the major version of `exhaust-macros`
# the same — or just switch to v0.4 if that feels cleaner.
version = "0.2.5"
edition.workspace = true
rust-version.workspace = true
description = "Trait and derive macro for working with all possible values of a type (exhaustive enumeration)."
repository.workspace = true
license.workspace = true
categories = ["algorithms", "rust-patterns", "no-std"]
keywords = ["exhaustive"]
include = ["*.rs", "README.md", "CHANGELOG.md", "LICENSE*"]

[features]
default = ["std"]
std = ["alloc"]
alloc = ["dep:itertools"]

[[test]]
name = "alloc_impls"
required-features = ["alloc"]

[[test]]
name = "std_impls"
required-features = ["std"]

[[test]]
name = "keyed_collections"
required-features = ["alloc"]

[dependencies]
# It’s OK to use an "=" version requirement here because this should be the *only* package that
# depends on `exhaust-macros`, so a dependency resolution conflict will not arise.
exhaust-macros = { version = "=0.3.0", path = "exhaust-macros" }
# itertools is used for its powerset iterator, which is only available with alloc
itertools = { workspace = true, optional = true }
mutants = ">=0.0.1, <0.0.5"

[workspace.dependencies]
# Minimum version of `itertools` is 0.13.0 because we need this bug fixed,
#   <https://github.com/rust-itertools/itertools/issues/337>,
# which affects `ExhaustMap`. 0.14 is the current latest version, which contains no breaking
# changes relevant to our usages: according to the changelog,
#   * Increased MSRV to 1.63.0
#   * Removed generic parameter from cons_tuples
# neither of which affects us.
itertools = { version = ">=0.13.0, <0.15", default-features = false, features = ["use_alloc"] }
