[package]
name = "exhaust-macros"
version = "0.2.0"
edition = "2021"
description = "Proc-macro support for the 'exhaust' library."
repository = "https://github.com/kpreid/exhaust/"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
itertools = { version = "0.13.0", default-features = false }
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = { version = "2.0.13", features = ["full"] }
