[package]
name = "exhaust-macros"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
description = "Proc-macro support for the 'exhaust' library. Do not use this library directly."
repository.workspace = true
license.workspace = true
include = ["*.rs", "README.md"]

[lib]
proc-macro = true

[dependencies]
itertools = { workspace = true }
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = { version = "2.0.73", features = ["full"] }
